# ezPano

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp  video.cpp
include/: feeder.h  frame.h  global_optimization.h  graph_node.h  gui.h  homography_solver.h  keyframe.h  loop_closer.h  loop_detector.h  motion_model.h  stitching.h  system.h  util.h
src/: .feeder.cpp.swp  .feeder.h.swp  CMakeLists.txt  feeder.cpp  feeder.h  global_optimization.cpp  global_optimization.h  gui.cpp  stitching.cpp  stitching.h  system.cpp  tracking.cpp  tracking.h
src/data/: bufferQueue.h
src/util/: custom_exceptions.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt  base.h  test_bufferQueue.cpp  test_feeder.cpp
